--- a/src/styles/MobileNav.css
+++ b/src/styles/MobileNav.css
@@ -9,8 +9,8 @@
     position: fixed;
     padding-left: 0px;
     margin: -16px;
-    right: 0;
-    bottom: 0;
+    left: 1rem;
+    top: 1rem;
     list-style: none;
     text-align: center;
     line-height: 3rem;
