--- a/src/styles/AllProducts.css
+++ b/src/styles/AllProducts.css
@@ -1,5 +1,5 @@
 .products-container{
-    padding: 2rem;
+    padding: 6rem 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
